# rusty-lander

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yaml  release.yaml
scripts/: Info.plist  build-mac-app.sh  create-mac-dmg.sh  icon-mac-app-builder.sh
src/: asset_loader.rs  audio.rs  camera.rs  collider.rs  debug.rs  explosion.rs  fuel.rs  game.rs  gizmos.rs  main.rs  movement.rs  particles_thruster.rs  spaceship.rs  speedometer.rs  state.rs
src/menu/: handler.rs  interaction.rs  mod.rs
web/: index.html
