[package]
name = "rusty-lander"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["David Romaní <david@flux.cat>"]
repository = "https://github.com/davidromani/rusty-lander"
description = "a Jupiter Lander video game port made with Rust & Bevy game engine"
readme = "README.md"

[dependencies]
avian2d = "0.1"
bevy = "0.14"
bevy_collider_gen = { version = "0.2", default-features = false, features = ["avian2d"] }
bevy_hanabi = { version = "0.12", default-features = false, features = ["2d"] }
iyes_perf_ui = "0.3"
leafwing-input-manager = "0.15"
rand = "0.8"
svg = "0.18"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
